@@ -1,4 +1,4 @@
-rev 12-Apr_09-18_41
+rev 12-Apr_10-11_47
 
 8 Sep
 This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.
@@ -140,3 +140,6 @@ Withdrew above fix
 Several fixes to handling of strings embedded in multiple format markup, as well as space following HTML entity 
 (see above 8 April), and removed from save.php the artifact left over from when fckgLite processed acronyms,
 as this has unintended side effects. (See http://www.freelists.org/post/fckglite/bug-with-setting-character-in-bold,2).
+
+10 April 2012
+Removed extra space from multiple format markup that shows up as blank underline
